<resources>
    <string name="app_name">Fluid Customisation</string>
    <string name="title_status_bar">Status Bar</string>
    <string name="title_qs">QS</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_gestures">Gestures</string>
    <string name="title_lockscreen">Lock Screen</string>
    <string name="search_btn" />
    <string name="back_btn" />
</resources>
